# postgres-prebuilt

./: .bazelrc  BUILD.bazel  Dockerfile  MODULE.bazel  README.md  WORKSPACE.bazel  docker-run.sh
.github/workflows/: release.yml
patches/: enable-new-dtags.patch
postgres/: BUILD.bazel
zoneinfo/: defs.bzl
