load("@rules_foreign_cc//foreign_cc:defs.bzl", "configure_make")

exports_files(["LICENSE"])

PLATFORMS = [
    {
        "platform": "@zig_sdk//platform:darwin_amd64",
        "host": "amd-darwin",
    },
    {
        "platform": "@zig_sdk//platform:darwin_arm64",
        "host": "arm-darwin",
    },
    {
        "platform": "@zig_sdk//libc_aware/platform:linux_arm64_musl",
        "host": "arm-linux",
    },
    {
        "platform": "@zig_sdk//libc_aware/platform:linux_amd64_musl",
        "host": "amd-linux",
    },
]

# NOTE: This target is not hermetic.
# Host system must meet requirements outlined in: https://wiki.postgresql.org/wiki/Compile_and_Install_from_source_code

configure_make(
    name = "configure_make",
    build_data = [
        "@zoneinfo",
    ],
    configure_options = [
        "--with-system-tzdata=$(execpath @zoneinfo)",
        "--without-zlib",
        "--without-readline",
        "--host=arm-darwin",
    ],
    lib_source = "@postgresql",
    out_headers_only = True,
)

filegroup(
    name = "postgres",
    srcs = [
        ":configure_make",
    ],
    output_group = "gen_dir",
    visibility = [
        "//visibility:public",
    ],
)
